# Sync_S3_Aws

./: .gitignore  Cargo.toml  README.md  build.rs  dev.ps1
.agent/: persona.md  wf.md
.agent/skills/rust-s3-sync/: SKILL.md
src/: config.rs  main.rs  s3_client.rs  ui_handlers.rs  utils.rs
src/handlers/: auth.rs  file_picker.rs  filter.rs  log.rs  managers.rs  mod.rs  sync.rs
src/s3/: client.rs  mod.rs  prefix.rs  sync.rs
ui/: app_window.slint
ui/components/: aws_config.slint  filter_config.slint  folder_picker.slint  header.slint  progress_bar.slint
ui/dialogs/: bucket_manager.slint  confirm_delete.slint  region_manager.slint
ui/shared/: colors.slint  types.slint
