[package]
name = "rust_project"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.9.0"
tokio = { version = "1.36", features = ["full"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.58", features = ["behavior-version-latest"] }
rfd = "0.15"
walkdir = "2.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.9.0"
winres = "0.1"
